[workspace]
resolver = "3"
members = ["codegen", "docs", "mdsf"]
exclude = []

[workspace.package]
version = "0.11.1-next"
authors = ["Mads Hougesen <mads@mhouge.dk>"]
edition = "2024"
documentation = "https://github.com/hougesen/mdsf#readme"
readme = "README.md"
homepage = "https://github.com/hougesen/mdsf?tab=readme-ov-file"
repository = "https://github.com/hougesen/mdsf"
license = "MIT"

[workspace.dependencies]
assert_cmd = "2.1.2"
clap = { version = "4.5.54", features = ["derive"] }
clap_complete = "4.5.65"
clap_complete_nushell = "4.5.10"
convert_case = "0.10.0"
directories = { version = "6.0.0" }
env_logger = "0.11.8"
ignore = "0.4.25"
json_comments = "0.2.2"
liquid = "0.26.11"
log = "0.4.29"
mdsf = { path = "./mdsf", features = ["json-schema"] }
owo-colors = { version = "4.2.3", features = ["supports-colors"] }
predicates = "3.1.3"
process_control = { version = "5.2.0" }
regex = "1.12.2"
schemars = { version = "1.2.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = { version = "0.9.34" }
sha2 = "0.10.9"
tempfile = "3.24.0"
terminal_size = "0.4.3"
test-with = { version = "0.15.6", default-features = false, features = [
  "executable",
] }
threadpool = "1.8.1"
ureq = "3.1.4"
which = { version = "8.0.0" }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
