[workspace]
resolver = "3"
members = ["codegen", "docs", "mdsf"]
exclude = []

[workspace.package]
version = "0.12.0-next"
authors = ["Mads Hougesen <mads@mhouge.dk>"]
edition = "2024"
documentation = "https://github.com/hougesen/mdsf#readme"
readme = "README.md"
homepage = "https://github.com/hougesen/mdsf?tab=readme-ov-file"
repository = "https://github.com/hougesen/mdsf"
license = "MIT"

[workspace.dependencies]
assert_cmd = "2.2.1"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.2"
clap_complete_nushell = "4.6.0"
convert_case = "0.11.0"
directories = "6.0.0"
env_logger = "0.11.10"
ignore = "0.4.25"
json5 = "1.3.1"
liquid = "0.26.11"
log = "0.4.29"
mdsf = { path = "./mdsf", features = ["json-schema"] }
owo-colors = { version = "4.3.0", features = ["supports-colors"] }
predicates = "3.1.4"
process_control = "5.2.0"
regex = "1.12.3"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.11.0"
tempfile = "3.27.0"
terminal_size = "0.4.4"
test-with = { version = "0.16.1", default-features = false, features = [
  "executable",
] }
threadpool = "1.8.1"
toml = "1.1.2"
ureq = "3.3.0"
which = "8.0.2"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
