[package]
name = "mdsf-codegen"
version = "0.0.0"
edition.workspace = true
description = "Code generator for mdsf"
license.workspace = true
readme.workspace = true
keywords = []
categories = []
authors = ["Mads Hougesen <mads@mhouge.dk>"]
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
convert_case = "0.6.0"
ignore.workspace = true
mdsf = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# TODO: switch to other yaml library since serde_yaml is deprecated
# NOTE: since it is just a build dependency it is low priority
serde_yaml = { workspace = true }
toml = { workspace = true }
