[package]
name = "mdsf-codegen"
version.workspace = true
edition.workspace = true
description = "Code generator for mdsf"
license.workspace = true
readme.workspace = true
keywords = []
categories = []
authors = ["Mads Hougesen <mads@mhouge.dk>"]
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
convert_case = { workspace = true }
ignore = { workspace = true }
mdsf = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# TODO: switch to other yaml library since serde_yaml is deprecated
# NOTE: since it is just a build dependency it is low priority
serde_yaml = { workspace = true }
