[package]
name = "mdsf-codegen"
version = { workspace = true }
authors = ["Mads Hougesen <mads@mhouge.dk>"]
edition = { workspace = true }
description = "Code generator for mdsf"
readme = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = []
categories = []
publish = false

[dependencies]
anyhow = { workspace = true }
convert_case = { workspace = true }
ignore = { workspace = true }
mdsf = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# TODO: switch to other yaml library since serde_yaml is deprecated
# NOTE: since it is just a build dependency it is low priority
serde_yaml = { workspace = true }
ureq = { workspace = true }
