[package]
name = "docs"
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
liquid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
