[package]
name = "mdsf"
version = "0.7.0-next"
edition.workspace = true
description = "Format, and lint, markdown code snippets using your favorite tools"
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = [
  "markdown",
  "formatter",
  "pretty-printing",
  "code-formatter",
  "linter",
]
homepage.workspace = true
readme.workspace = true
categories = ["development-tools", "command-line-utilities"]
exclude = ["codegen/**"]
default-run = "mdsf"

[package.metadata.wix]
upgrade-guid = "A0250526-8295-4489-AD3B-924CBD3EE2E7"
path-guid = "500835C2-981A-4C1F-9A6F-36EC4D194212"
license = false
eula = false

[features]
default = []
json-schema = ["dep:schemars"]

[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
clap_complete_nushell = { workspace = true }
console = { workspace = true }
directories = { workspace = true }
env_logger = { workspace = true }
ignore = { workspace = true }
json_comments = { workspace = true }
log = { workspace = true }
process_control = { workspace = true }
regex = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
terminal_size = { workspace = true }
threadpool = { workspace = true }
which = { workspace = true }

[dev-dependencies]
test-with = { workspace = true }
