[package]
name = "mdsf"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Format, and lint, markdown code snippets using your favorite tools"
documentation = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = [
  "code-formatter",
  "formatter",
  "linter",
  "markdown",
  "pretty-printing",
]
categories = ["command-line-utilities", "development-tools"]
exclude = ["codegen/**"]
default-run = "mdsf"

[package.metadata.wix]
upgrade-guid = "A0250526-8295-4489-AD3B-924CBD3EE2E7"
path-guid = "500835C2-981A-4C1F-9A6F-36EC4D194212"
license = false
eula = false

[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
clap_complete_nushell = { workspace = true }
directories = { workspace = true }
env_logger = { workspace = true }
ignore = { workspace = true }
json5 = { workspace = true }
log = { workspace = true }
owo-colors = { workspace = true }
process_control = { workspace = true }
regex = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
terminal_size = { workspace = true }
threadpool = { workspace = true }
toml = { workspace = true }
which = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
test-with = { workspace = true }

[features]
default = []
json-schema = ["dep:schemars"]
